--- a/src/components/sbb-navigation-list/sbb-navigation-list.scss
+++ b/src/components/sbb-navigation-list/sbb-navigation-list.scss
@@ -2,15 +2,18 @@
 // travel the shadow boundary are defined through this mixin
 @include host-component-properties;
 
+:host {
+  display: flex;
+  flex-direction: column;
+}
+
 .sbb-navigation-list__content {
   @include list-reset;
 
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-}
-
-.sbb-navigation-list__action {
+  gap: var(--sbb-spacing-fixed-2x);
   margin-block: var(--sbb-spacing-fixed-1x);
 }
 
